# rknn_model_zoo_image_utils_cpp_opencv

utils/: CMakeLists.txt  image_utils.cpp  image_utils.h
